# voice_to_text

./: .gitignore  pyproject.toml
src/: config.py  main.py
src/services/: speech_recognition.py  text_processing.py
