[project]
name = "voice-to-text-bot"
version = "0.1.1"
description = "Телеграм бот преобразования речт в текст и отсылка готовой формы по почте"
authors = [
    {name = "Timur Meremkulov",email = "meremkulovtv@gmail.com"}
]
license = {text = "open"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "aiogram (>=3.24.0,<4.0.0)",
    "ruff (>=0.14.11,<0.15.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "natasha (>=1.6.0,<2.0.0)",
    "gigaam (>=0.1.0,<0.2.0)",
    "torchaudio (==2.5.1)",
    "torch (==2.5.1)",
    "soundfile (>=0.13.1,<0.14.0)",
    "dataparser (>=0.0.2,<0.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
